# CSM

./: .gitignore  CHANGELOG.md  CSM.spec  FEASIBILITY_ANALYSIS.md  README.md  main.py  mining_export_50_bilibili.csv  pyproject.toml  requirements-backup.txt  导购文框架模板.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
csm_core/: __init__.py  __main__.py  config.py  pipeline.py
csm_core/angle/: __init__.py  directive.py  filters.py  model.py  taxonomy.py
csm_core/assembler/: cards.py  constraints.py  plan.py  render.py  reroll.py  sampler.py
csm_core/batch/: report.py  runner.py
csm_core/brand_memory/: __init__.py  fingerprint.py  identity.py  inject.py  model.py  resolver.py  specs.py  whitelist.py
csm_core/browser_infra/: __init__.py  cookie_store.py  interactive_login.py  mining_browser.py  patchright_pool.py  proxy_pool.py  rate_limit.py  window_util.py
csm_core/comparison/: __init__.py  compose.py  directive.py
csm_core/dedup/: __init__.py  analyzer.py  corpus.py  index.py  report.py  shingles.py
csm_core/export/: markdown.py
csm_core/factcheck/: __init__.py  checker.py  completeness.py  extract.py  model.py
csm_core/feedback/: __init__.py  model.py  storage.py
csm_core/framework/: __init__.py  loader.py  renderer.py  schema.py  trace.py
csm_core/keyword/: __init__.py  extractor.py
csm_core/lint/: __init__.py  model.py  rules.py  (+1 more)
csm_gui/: __main__.py  _version.py  app.py  config.py  llm_factory.py  main_window.py  recent_docs.py  theme.py
docs/: Design.md  design-system.md  monitor-troubleshooting.md  vault-ranked-list-conventions.md
examples/: README.md
frameworks/: daogou-frame-v1.json
frontend/: .env.example  .gitignore  README.md  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs  updater.rs
scripts/: backfill_brand_model.py  build_manifest.py  build_sidecar.py  build_updater.py  check_competitor_pool_filters.py  clear_account.py  dev.ps1  extract_changelog.py  geo_api_probe.py  geo_doubao_probe.py  make_icon.py  manual_test_baidu.py  manual_test_zhihu_search.py  merge-branch.ps1  migrate_framework_to_blocks.py  migrate_template_to_skill.py  probe_zhihu_cookie.py  release.py  release_check.py  smoke_ks_only.py  smoke_mining_inproc.py  smoke_run_2platforms.py  smoke_run_3platforms.py  smoke_run_b.py  smoke_run_c.py  smoke_run_d.py  smoke_run_e.py  smoke_run_g.py
sidecar/: README.md  csm-sidecar.spec  pyproject.toml
sidecar/csm_sidecar/: __init__.py  __main__.py  auth.py  event_bus.py  events.py  heartbeat.py  lifespan.py  logging_setup.py  main.py  monitor_bus.py
sidecar/csm_sidecar/routes/: aggregation.py  angle.py  article.py  assembler.py  batch.py  brand_memory.py  chain.py  config.py  dedup.py  feedback.py  generate.py  lint.py  mining.py  monitor.py  proxy.py  score.py  skills.py  system.py  templates.py  updater.py  vault.py  vault_atomize.py  vault_writer.py  xhs.py
sidecar/csm_sidecar/services/: aggregation_service.py  assembler_service.py  atomize_service.py  batch_service.py  brand_memory_service.py  chain_service.py  comparison_cache.py  config_service.py  dedup_service.py  export_service.py  fact_service.py  factcheck_service.py  feedback_service.py  generate_service.py  history_service.py  keyword_service.py  lint_service.py  llm_factory.py  mining_ai_service.py  mining_images_service.py  mining_service.py  monitor_lifecycle.py  monitor_loop.py  monitor_service.py  polish_service.py  score_service.py  skills_service.py  startup_dirs.py  templates_service.py  title_service.py  updater_service.py  vault_service.py  vault_writer_service.py  xhs_ai_service.py  xhs_images_service.py
sidecar/scripts/: tikhub_probe.py
sidecar/tests/: conftest.py  test_aggregation_routes.py  test_article_routes.py  test_assembler_routes.py  test_atomize_service.py  test_atomize_split.py  test_baidu_browser.py  test_baidu_keyword.py  test_baidu_login.py  test_batch_routes.py  test_batch_scoring.py  test_brand_memory_routes.py  test_brand_memory_service.py  test_browser_infra_relocation.py  test_card_coverage.py  test_chain_layout_guard.py  test_chain_rerun.py  test_chain_service.py  test_chrome_detect.py  test_chrome_preflight.py  test_collect_dedup.py  test_comment_prefilter.py  test_comparison_routes.py  test_comparison_service.py  test_config_routes.py  test_dedup_routes.py  test_ensure_browsers_path.py  test_event_bus.py  test_excel_import.py  test_export_history_mirror.py  test_fact_service.py  test_factcheck_service.py  test_feedback_routes.py  test_feedback_service.py  test_finalize_draft.py  test_finalize_job.py  test_finalize_route.py  test_generate_angle.py  test_generate_cancel.py  test_generate_chain.py  (+76 more)
sidecar/tests/fixtures/baidu/: captcha_urls.txt  serp_2026_no_result_token.html  serp_default_only.html  serp_with_news.html
sidecar/tests/fixtures/mining/bilibili/: search_response.json
sidecar/tests/fixtures/mining/douyin/: search_response.json
sidecar/tests/fixtures/mining/kuaishou/: search_dom.html
sidecar/tests/routes/: test_config.py  test_monitor.py
sidecar/tests/tikhub/: test_client.py  test_comment_adapter.py  test_config_fields.py  test_dispatch.py  test_normalize_comments.py  test_normalize_zhihu.py  test_paginate.py  test_zhihu_adapter.py
sidecar/tests/tikhub/fixtures/: tikhub_bilibili_comments.json  tikhub_douyin_comments.json  tikhub_kuaishou_comments.json  tikhub_zhihu_answers.json
templates/: daogou-changjing-renqun.json  daogou-changjing-renqun.json.bak  daogou-kepuwuping.json  daogou-kepuwuping.json.bak  导购·吸尘器·三品-r2j7.json
tests/: conftest.py  test_docx_inline_bold.py  test_keyword_extractor.py  test_test_framework.py  test_title_generator.py
updater/: main.py  updater.spec
(+842 files in other folders)
