[project]
name = "csm"
dynamic = ["version"]
description = "Content SEO Maker - 基于 Obsidian Vault 的 SEO 文章生成工具"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "python-frontmatter>=1.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "click>=8.1",
    "anthropic>=0.39",
    "datasketch>=1.6",
    "python-docx>=1.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.4,<6.6",
    "PyQt6-Fluent-Widgets[full]>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
]

[project.scripts]
csm = "csm_core.__main__:cli"
csm-gui = "csm_gui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["csm_core*", "csm_gui*"]

[tool.setuptools.package-data]
# Ship the bundled OPPO Sans TTF with the csm_gui package so installs
# (including wheel / editable-install / pyinstaller) pick it up.
csm_gui = ["assets/fonts/*.ttf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: 真实外部 API 调用测试（默认不跑）",
]

[tool.setuptools.dynamic]
version = { attr = "csm_gui._version.__version__" }
