[project]
name = "csm"
dynamic = ["version"]
description = "Content SEO Maker - 基于 Obsidian Vault 的 SEO 文章生成工具"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "python-frontmatter>=1.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "click>=8.1",
    "anthropic>=0.39",
    "datasketch>=1.6",
    "python-docx>=1.0",
    # Monitor module: Zhihu fast path uses curl_cffi to impersonate a real
    # Chrome TLS handshake (avoids being instantly fingerprinted as bot
    # traffic). When the API returns risk-control HTML we fall through to
    # a real Chromium:
    #   - patchright (preferred) — Playwright fork with stealth patches
    #     baked into the bundled Chromium. Ships its own ~170MB binary
    #     downloaded via `patchright install chromium`. Onedir packagers
    #     should NOT bundle that binary; it's downloaded post-install.
    #   - DrissionPage (legacy fallback) — reuses the user's local Chrome.
    #     Kept on the dependency list so the engine setting can fall back
    #     without a re-install when Patchright misbehaves.
    "curl_cffi>=0.7",
    "patchright>=1.40",
    "DrissionPage>=4.1",
    # psutil powers cross-thread cleanup of Patchright's Chromium tree.
    # ``patchright_pool._kill_process_tree`` walks the Node subprocess
    # to terminate orphaned Chromium descendants — without it the idle
    # reaper logs "closing to free RAM" but the actual processes leak.
    # Already transitively pulled by DrissionPage, but stated explicitly
    # so PyInstaller hooks pick it up and a future Drission removal
    # doesn't silently break cleanup.
    "psutil>=5.9",
    "beautifulsoup4>=4.12",
    # openpyxl powers the monitor module's Excel batch-import flow. Tiny
    # (~300KB) and pure-python, so onedir packaging cost is negligible.
    "openpyxl>=3.1",
    # GEO 信源域名规整：取注册域名（去子域 + 多段中国后缀）。
    # 配置为离线模式（suffix_list_urls=()，cache_dir=None），PyInstaller spec
    # 补 collect_data_files("tldextract") 以带入 bundled suffix-list snapshot。
    "tldextract>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[project.scripts]
csm = "csm_core.__main__:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["csm_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: 真实外部 API 调用测试（默认不跑）",
]

[tool.setuptools.dynamic]
version = { attr = "csm_core.__version__" }
