[project]
name = "csm-sidecar"
version = "0.0.1"
description = "FastAPI sidecar exposing csm_core capabilities to the Tauri+Vue frontend."
requires-python = ">=3.11"
dependencies = [
    # Sidecar-only deps. csm_core is consumed via the parent project, not vendored.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "keyring>=24.0",
    "apscheduler>=3.10",
    # Re-stated to make the sidecar a buildable PyInstaller target on its
    # own without importing the GUI optional-deps from the parent.
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",       # FastAPI TestClient (sync) + async client
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["csm_sidecar*"]
