[project]
name = "csm-sidecar"
version = "0.0.1"
description = "FastAPI sidecar exposing csm_core capabilities to the Tauri+Vue frontend."
requires-python = ">=3.11"
dependencies = [
    # Sidecar-only deps. csm_core is consumed via the parent project, not vendored.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",  # multipart/form-data image uploads (Phase 2 T5)
    "keyring>=24.0",
    "pywin32-ctypes>=0.2.0; sys_platform == \"win32\"",  # keyring's Windows Credential Manager backend hard-depends on this; pin explicitly (§13 R6)
    "apscheduler>=3.10",
    # Re-stated to make the sidecar a buildable PyInstaller target on its
    # own without importing the GUI optional-deps from the parent.
    "pydantic>=2.6",
    "readability-lxml>=0.8.1",  # baidu 抓正文用
    "lxml>=4.9",                # readability 依赖；显式列出便于 PyInstaller 打包
    "curl-cffi>=0.7",           # 已在用，显式列以便 sidecar 单独可装
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",       # FastAPI TestClient (sync) + async client
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["csm_sidecar*"]
