[package]
name = "csm-tauri"
version = "0.4.4"
description = "CSM — Tauri shell for the Vue frontend + Python sidecar"
authors = ["CSM"]
edition = "2021"
rust-version = "1.78"

# Top-level binary; src-tauri/src/main.rs is the entry point.
[[bin]]
name = "csm-tauri"
path = "src/main.rs"

[lib]
name = "csm_tauri_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools 在 release 也开 —— 还在 0.4 阶段，让用户能 F12 看真实
# 控制台 / 网络错误，比闭眼盲调成本低很多。等 GA 时再砍掉。
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "io-util"] }
log = "0.4"

[features]
default = ["custom-protocol"]
# This feature is used to inform the embedded webview that we are running
# in production (i.e. not via tauri dev).
custom-protocol = ["tauri/custom-protocol"]
